fix: layout issue in Chrome v76

--- a/src/content.less
+++ b/src/content.less
@@ -221,6 +221,7 @@
       display: flex;
       flex: 1;
       flex-direction: column;
+      max-height: calc(100vh - 34px); // temporary fix for layout issue occurred since Chrome v76
 
       .meta-bar {
         position: relative;
